[project]
name = "yandex_algo_math_ml"
version = "0.1.0"
description = "Some solutions for Yandex Handbook (mathematics and ML): https://education.yandex.ru/handbook/math"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = "test_*"
addopts = [
  "-vv",				        # подробный вывод хода теста
  "--import-mode=importlib"  	# меньше проблем с импортами
]
